--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -25,5 +25,5 @@
 <% end %>
 
 <% content_for :footer do %>
-<%= link_to 'New announcement', new_alert_path, class: 'btn btn-outline-primary ml-auto' %>
+<%= link_to 'New announcement', new_alert_path, class: 'btn btn-outline-primary ms-auto' %>
 <% end %>
