--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -6,5 +6,5 @@
 
 <% content_for :footer do %>
 	<%= render partial: 'alerts/back' %>
-	<%= submit_tag 'Save announcement', form: 'alert_form', class: 'ml-auto btn btn-primary float-right' %>
+	<%= submit_tag 'Save announcement', form: 'alert_form', class: 'ms-auto btn btn-primary float-end' %>
 <% end %>
