--- a/app/views/application/_modal_title.html.erb
+++ b/app/views/application/_modal_title.html.erb
@@ -1,2 +1,2 @@
 <h5 id="modal-browser-title" class="modal-title"><%= header %></h5>
-<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
