--- a/app/views/application/_schedule_dropdown.html.erb
+++ b/app/views/application/_schedule_dropdown.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.admin? || current_schedule.schedule_spans.accessible.many? %>
 
 <div class="dropdown">
-	<button class="btn btn-link nav-head text-dark m-0 p-0 dropdown-toggle <%= 'unavailable' if !current_module.public? %>" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+	<button class="btn btn-link nav-head text-dark m-0 p-0 dropdown-toggle <%= 'unavailable' if !current_module.public? %>" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 		<%= current_module.name %>
 	</button>
 
@@ -11,7 +11,7 @@
 			<% if current_user.admin? %>
 			<%= checkbox_for(mod, :public, mod.public,
 				admin_course_update_schedule_span_path(id: mod.id),
-				form: { html: { class: 'ml-3' } } ) do end %>
+				form: { html: { class: 'ms-3' } } ) do end %>
 			<% end %>
 			<%= button_to mod.name, profile_set_module_path(module: mod.id), 
 				method: :post, remote: true,
