--- a/app/views/grading/_file_tabs.html.erb
+++ b/app/views/grading/_file_tabs.html.erb
@@ -1,11 +1,11 @@
 <% @files.each do |filename, contents| %>
 <li class="nav-item">
-	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename.html_safe %></a>
+	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-bs-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename.html_safe %></a>
 </li>
 <% end %>
 
 <% if @submit.has_auto_feedback? %>
 <li class="nav-item">
-	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-check" role="tab">Check</a>
+	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-bs-toggle="tab" href="#file-check" role="tab">Check</a>
 </li>
 <% end %>
