--- a/app/views/hands/hands/new.html.erb
+++ b/app/views/hands/hands/new.html.erb
@@ -17,7 +17,7 @@
 <%= render partial: 'form' %>
 		
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-	<button type="submit" class="btn btn-primary btn-block">Mark as done</button>
+	<button type="submit" class="btn btn-primary">Mark as done</button>
 </div>
 
 <% end %>
