--- a/app/views/items/_note.html.erb
+++ b/app/views/items/_note.html.erb
@@ -8,7 +8,7 @@
 <div class=" ">
 	<div class="text-dark d-flex justify-content-between pb-2">
 		<small class="author fw-bold"><%= note.author_name %></small>
-		<small class="ml-3">
+		<small class="ms-3">
 			<%= date_span_with_title(note.created_at)%>
 			<% if !note.log %>
 			<%= link_to bootstrap_icon('pen', height: 16, width: 16, style: 'vertical-align: sub;'), edit_note_path(note) %>
