--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -27,7 +27,7 @@
 			<%= link_to(note.student, class: 'list-group-item', data: { 'turbo-frame': 'modal' }, onclick: 'modalBrowser.show();') do %>
 			<%#= render partial: "note", object: note %>
 			<%= note.student.name %>
-			<span class="float-right badge bg-secondary">bla</span>
+			<span class="float-end badge bg-secondary">bla</span>
 			<br>
 			<%= note.text %>
 			<br>
