--- a/app/views/users/notes.html.erb
+++ b/app/views/users/notes.html.erb
@@ -13,7 +13,7 @@
 			<div class="flex-fill">
 				<%= f.text_area :text, size: "x2", class: "form-control flex-fill", required: true %>
 			</div>
-			<div class="ml-3">
+			<div class="ms-3">
 				<%= f.submit "Add note", class: "btn btn-primary" %>
 			</div>
 		</div>
