--- a/app/views/admin/site/_git.html.erb
+++ b/app/views/admin/site/_git.html.erb
@@ -4,11 +4,11 @@
 <p><%= Settings.git_repo %> @ <%= Settings.git_branch %></p>
 <% else %>
 <%= form_tag(admin_site_set_git_repo_path, class:'form d-flex') do %>
-<div class="form-group flex-fill">
+<div class=" flex-fill">
 	<label for="repo_url">Repo URL</label>
 	<%= text_field_tag 'repo_url', Settings['git_repo'], required: true, class: 'form-control' %>
 </div>
-<div class="form-group ml-3">
+<div class=" ms-3">
 	<label for="repo_branch">Branch</label>
 	<div class="input-group">
 		<%= text_field_tag 'repo_branch', Settings['git_branch'], class: 'form-control' %>
