--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -22,7 +22,7 @@
 			<%= render partial: 'schedule_permissions', locals: { schedules: user.schedules, user: user } %>
 			</div>
 			<div class="btn-group">
-				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<%= bootstrap_icon 'plus' %>
 				</button>
 				<ul class="dropdown-menu">
@@ -39,7 +39,7 @@
 			<%= render partial: 'group_permissions', locals: { groups: user.groups, user: user } %>
 			</div>
 			<div class="btn-group">
-				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<%= bootstrap_icon 'plus' %>
 				</button>
 				<ul class="dropdown-menu">
