--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -20,10 +20,10 @@
 	<%= f.label :body %><br>
 	<%= f.text_area :body, class: 'form-control', rows: 10, required:true %>
 </div>
-<div class="form-check pl-1 pb-1">
+<div class="form-check ps-1 pb-1">
 	<label><%= f.check_box :published %> Publish in announcements</label>
 </div>
-<div class="form-check pl-1 mb-3">
+<div class="form-check ps-1 mb-3">
 	<% if AlertMailer.available? %>
 	<label><%= check_box_tag :send_mail %> Send an e-mail with the current text (now!)</label>
 	<% else %>
@@ -31,14 +31,14 @@
 	<% end %>
 </div>
 
-<div class="form-check pl-1 pb-1">
+<div class="form-check ps-1 pb-1">
 	<label>
 		<input type="radio" name="alert[schedule_id]" <%= 'checked="checked"' if @alert.schedule_id.nil? %> required id="optionsRadios1" value="<%= nil %>" style="margin-top:0;"> (for everyone)
 	</label>
 </div>
 
 <%= f.collection_radio_buttons(:schedule_id, Schedule.all, :id, :name) do |b|
-	content_tag(:div, class: 'form-check pl-1 pb-1') { b.label { b.radio_button + " " + b.text } }
+	content_tag(:div, class: 'form-check ps-1 pb-1') { b.label { b.radio_button + " " + b.text } }
 end %>
 
 
