--- a/app/views/application/_alerts.html.erb
+++ b/app/views/application/_alerts.html.erb
@@ -1,13 +1,13 @@
 <% if flash[:alert] %>
 <div class="alert alert-danger alert-dismissible fade show">
-	<button type="button" class="btn-close" data-dismiss="alert"></button>
+	<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 	<%= flash[:alert] %>
 </div>
 <% end %>
 
 <% if flash[:notice] %>
 <div class="alert alert-success alert-dismissible fade show">
-	<button type="button" class="btn-close" data-dismiss="alert"></button>
+	<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 	<%= flash[:notice] %>
 </div>
 <% end %>
