--- a/app/views/application/_sidebar_content.html.erb
+++ b/app/views/application/_sidebar_content.html.erb
@@ -3,7 +3,7 @@
 	<% if Course.modules.any? %>
 	<ul class="nav">
 		<li>
-			<p class="ml-1"><%= current_module ? t(:other) : t(:modules) %></p>
+			<p class="ms-1"><%= current_module ? t(:other) : t(:modules) %></p>
 		</li>
 		<% Course.modules.each do |title, url|  %>
 		<li><%= link_to title.html_safe, url, class:"nav-link" %></li>
@@ -21,7 +21,7 @@
 					<%= render 'schedule_dropdown' %>
 				</div>
 				<% if current_schedule.self_service %>
-				<div class="ml-auto mr-n1 spr-1">
+				<div class="ms-auto me-n1">
 					<%= button_to prev_module.present? ? profile_prev_path : '', method: :post, id: 'schedule_prev_button', disabled:!prev_module.present?, class: 'btn btn-link p-0', form: { style: "display:inline;", data: {'turbo-frame': 'sidebar-frame'} } do bootstrap_icon('chevron-left', class: 'rounded', style: 'vertical-align:-4px;').html_safe end %>
 					<%= button_to next_module.present? ? profile_next_path : '', method: :post, id: 'schedule_next_button', disabled:!next_module.present?, class: 'btn btn-link p-0', form: { style: "display:inline;", data: {'turbo-frame': 'sidebar-frame'} } do bootstrap_icon('chevron-right', class: 'rounded', style: 'vertical-align:-4px;').html_safe end %>
 				</div>
