--- a/app/views/hands/hands/_hand.html.erb
+++ b/app/views/hands/hands/_hand.html.erb
@@ -1,8 +1,8 @@
 <%= hand.user.name %> / <strong><%= hand.subject %></strong>
 <% if should_show_groups_in_hands? && hand.user.group %>
-<span class="float-right badge bg-secondary" style="<%= get_colors_for_text(hand.user.group.name) %>"><%= hand.user.group.name %></span>
+<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(hand.user.group.name) %>"><%= hand.user.group.name %></span>
 <% elsif hand.user.schedule %>
-<span class="float-right badge bg-secondary" style="<%= get_colors_for_text(hand.user.schedule.name) %>"><%= hand.user.schedule.name %></span>
+<span class="float-end badge bg-secondary" style="<%= get_colors_for_text(hand.user.schedule.name) %>"><%= hand.user.schedule.name %></span>
 <% end %>
 <br>
 <small>in line since <%= minutes_ago(hand.created_at) %> minutes <% if Settings.hands_location && !Settings.hands_link %> @ <%= hand.location %><% end %></small>
