--- a/app/views/layouts/modal.html.erb
+++ b/app/views/layouts/modal.html.erb
@@ -3,7 +3,7 @@
 	<% if content_for?(:title) %>
 	<div id="modal-browser-header">
 		<%= yield(:title) %>
-		<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 	</div>
 	<% end %>
 	<div id="modal-browser-body">
