--- a/app/views/layouts/navbar.html.erb
+++ b/app/views/layouts/navbar.html.erb
@@ -5,12 +5,12 @@
 <% content_for :body do %>
 <div class="d-flex flex-column h-100" style="max-height:100%">
 
-    <div id="navbar" class="navbar navbar-expand-lg flex-shrink-0 flex-wrap py-2 px-2 pr-md-3">
+    <div id="navbar" class="navbar navbar-expand-lg flex-shrink-0 flex-wrap py-2 px-2 pe-md-3">
         <%= render 'brand' %>
         <%= yield :navbar_items %>
         <%= render 'float_nav' %>
         <% if !authenticated? %>
-        <ul id="icon-nav" class="navbar-nav ml-auto">
+        <ul id="icon-nav" class="navbar-nav ms-auto">
             <li class="nav-item"><%= link_to(t(:sign_in), session_login_path, class:"snav-link", data: { turbo: false })%></li>
         </ul>
         <% else %>
