--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -18,7 +18,7 @@
 
 <div class="mt-3 actions clearfix">
 	<%= link_to 'Cancel', @note, class: 'btn btn-sm btn-secondary'%>
-	<%= f.submit class: 'btn btn-sm btn-primary float-right' %>
+	<%= f.submit class: 'btn btn-sm btn-primary float-end' %>
 </div>
 
 <% end %>
