--- a/app/views/overviews/_tabs.html.erb
+++ b/app/views/overviews/_tabs.html.erb
@@ -4,7 +4,7 @@
 
 	<% if @accessible_schedules.size > 1 %>
 	<div class="dropdown">
-		<button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		<button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			<%= @name %>
 		</button>
 		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -26,10 +26,10 @@
 	<div class="btn-group" role="group">
 
 		<div class="btn-group" role="group">
-			<button id="btnGroupDrop1" type="button" class="btn btn-sm btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<button id="btnGroupDrop1" type="button" class="btn btn-sm btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<%= bootstrap_icon 'check' %> <span class="caret"></span>
 			</button>
-			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="btnGroupDrop1">
+			<div class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
 				<% if current_user.senior? %>
 				<%= link_to 'Publish what\'s done'.html_safe, publish_finished_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'Are you sure?' }, class:"dropdown-item" %>
 				<% end %>
@@ -53,11 +53,11 @@
 
 		<% if @selected_schedule && current_user.admin? %>
 		<div class="btn-group" role="group">
-			<button type="button" class="btn btn-sm btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<button type="button" class="btn btn-sm btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<%= bootstrap_icon 'people' %> <span class="caret"></span>
 			</button>
 
-			<ul class="dropdown-menu dropdown-menu-right">
+			<ul class="dropdown-menu dropdown-menu-end">
 				<%= link_to 'Import Groups'.html_safe, new_schedule_import_groups_path(schedule_slug: @selected_schedule), target: 'modal', class:"dropdown-item" %>
 				<%= link_to 'Generate Groups'.html_safe, new_schedule_generate_groups_path(schedule_slug: @selected_schedule), target: 'modal', class:"dropdown-item" %>
 			</ul>
