--- a/app/views/submits/_grade.erb
+++ b/app/views/submits/_grade.erb
@@ -1,7 +1,7 @@
 <turbo-frame id="grade">
 
 <% if not @submit.url.blank? %>
-<div class="form-group">
+<div class="">
 	<label for="" class="control-label">Link</label>
 	<p class="form-control-static">
 		<%= link_to @submit.url, @submit.url %>
@@ -9,14 +9,14 @@
 </div>
 <% end %>
 
-<div class="form-group">
+<div class="">
 	<label for="grade_comments" class="control-label">Feedback</label>
 	<div class="border rounded p-2">
 	<%= @grade.comments.present? && simple_markdown(@grade.comments) || '<p>(none)</p>'.html_safe %>
 	</div>
 </div>
 
-<div class="form-group">
+<div class="">
 	<label for="" class="control-label">Internal notes</label>
 	<div class="border rounded p-2">
 	<%= @grade.notes.present? && simple_markdown(@grade.notes) || '<p>(none)</p>'.html_safe %>
@@ -27,12 +27,12 @@
 	<% if @submit.pset.config && @submit.pset.config['subgrades'] %>
 	<% @submit.pset.config['subgrades'].each do |subgrade_name, subgrade_type| %>
 		<% if subgrade_type == 'integer' || subgrade_type == 'float' %>
-		<div class="form-group flex-fill">
+		<div class=" flex-fill">
 			<label for="input_<%= subgrade_name %>" class="control-label"><%= subgrade_name.capitalize %><% if @submit.automatic_scores[subgrade_name] %>(<%= @submit.automatic_scores[subgrade_name] %>)<% end %></label>
 			<input type="text" class="form-control form-control-sm" id="input_<%= subgrade_name %>" disabled name="grade[subgrades[<%= subgrade_name %>]]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
 		</div>
 		<% elsif subgrade_type == 'boolean' %>
-		<div class="form-group">
+		<div class="">
 			<div class="checkbox">
 				<label>
 					<%= check_box_tag "grade[subgrades[#{subgrade_name}]]", -1, @grade.subgrades && @grade.subgrades[subgrade_name] && !@grade.subgrades[subgrade_name].zero?, disabled: true %> <%= subgrade_name.humanize %>
@@ -46,7 +46,7 @@
 
 
 <% if current_user.admin? || not(@submit.pset.config && @submit.pset.config['subgrades'] && @submit.pset.config['calculation']) %>
-<div class="form-group">
+<div class="">
 	<label for="grade_grade" class="control-label">Grade
 		<% if current_user.admin? && @grade.calculated_grade %>(<%= @grade.calculated_grade %>)<% end %>
 	</label>
@@ -57,10 +57,10 @@
 <% end %>
 
 <% if current_user.senior? %>
-<div class="form-group d-flex mt-3 mb-0 justify-content-end">
-	<%= button_to reject_grade_path(id: @grade.id), method: :patch, data: { confirm: "Sure to assign 0 grade and publish?" }, class: 'btn btn-secondary ml-2' do "Reject" end %>
+<div class=" d-flex mt-3 mb-0 justify-content-end">
+	<%= button_to reject_grade_path(id: @grade.id), method: :patch, data: { confirm: "Sure to assign 0 grade and publish?" }, class: 'btn btn-secondary ms-2' do "Reject" end %>
 	<% if current_user.admin? || current_user.senior? && !@grade.published? %>
-		<%= button_to reopen_grade_path(id: @grade.id), method: :patch, data: { confirm: "Sure to re-open for editing?" }, class: 'btn btn-secondary ml-2' do "Re-open" end %>
+		<%= button_to reopen_grade_path(id: @grade.id), method: :patch, data: { confirm: "Sure to re-open for editing?" }, class: 'btn btn-secondary ms-2' do "Re-open" end %>
 	<% end %>
 </div>
 <% end %>
