--- a/app/views/submits/_title.html.erb
+++ b/app/views/submits/_title.html.erb
@@ -4,7 +4,7 @@
 	<%= render partial: 'submits/info' %>
 	<ul class="nav nav-tabs mt-3" id="submit_tab" role="tablist">
 		<li class="nav-item">
-			<a class="nav-link active" id="submit-grading-tab" data-toggle="tab" href="#submit-grading" role="tab" aria-controls="home" aria-selected="true">Grading</a>
+			<a class="nav-link active" id="submit-grading-tab" data-bs-toggle="tab" href="#submit-grading" role="tab" aria-controls="home" aria-selected="true">Grading</a>
 		</li>
 		<%= render partial: 'grading/file_tabs', locals: { first: false } %>
 	</ul>
