--- a/app/views/users/_toolbar.html.erb
+++ b/app/views/users/_toolbar.html.erb
@@ -1,4 +1,4 @@
-<div class="ml-auto align-items-center d-inline-flex">
+<div class="ms-auto align-items-center d-inline-flex">
 	<%= link_to bootstrap_icon('envelope', width: 20), "https://secure.helpscout.net/search/?query=#{@student.mail}", target:"_new", class: 'px-2', style: 'display:inline-flex;' %>
 	<% if @student.alarm %>
 	<%= button_to [@student, user: {alarm: :false}], method: :patch, class: "btn btn-link text-danger p-0 px-2", style: 'display:inline-flex;', form: { class: 'd-inline-flex' } do %>
@@ -11,10 +11,10 @@
 	<% end %>
 
 	<div class="btn-group">
-		<button type="button" class="btn btn-link p-0 px-2 d-inline-flex align-items-center dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		<button type="button" class="btn btn-link p-0 px-2 d-inline-flex align-items-center dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			<%= @student.schedule_name %></span>
 		</button>
-		<ul class="dropdown-menu dropdown-menu-right">
+		<ul class="dropdown-menu dropdown-menu-end">
 			<% @schedules.each do |schedule| %>
 			<%= button_to [@student, user: {schedule_id: schedule.id}], method: :patch, class: 'dropdown-item' + class_if(@student.schedule_id == schedule.id, 'disabled') do "Assign to #{schedule.name}".html_safe end %>
 			<% end %>
@@ -22,10 +22,10 @@
 	</div>
 
 	<div class="btn-group">
-		<button type="button" class="btn btn-link p-0 px-2 d-inline-flex align-items-center dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		<button type="button" class="btn btn-link p-0 px-2 d-inline-flex align-items-center dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			<%= "#{bootstrap_icon 'people', width: 20}".html_safe %></span>
 		</button>
-		<ul class="dropdown-menu dropdown-menu-right">
+		<ul class="dropdown-menu dropdown-menu-end">
 			<% if @groups.any? %>
 			<% @groups.each do |group| %>
 			<%= button_to [@student, user: {group_id: group.id}], method: :patch, class: 'dropdown-item' + class_if(@student.group_id == group.id, 'disabled') do "Move to #{group.name}".html_safe end %>
@@ -39,10 +39,10 @@
 	</div>
 
 	<div class="btn-group">
-		<button type="button" class="btn btn-link p-0 px-2 d-inline-flex align-items-center dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		<button type="button" class="btn btn-link p-0 px-2 d-inline-flex align-items-center dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			<%= "#{bootstrap_icon 'list-check', width: 20}".html_safe %></span>
 		</button>
-		<ul class="dropdown-menu dropdown-menu-right">
+		<ul class="dropdown-menu dropdown-menu-end">
 			<% User.statuses.each do |status, status_value| %>
 				<%= button_to [@student, user: {status: status}], method: :put, class: 'dropdown-item' do "Mark as #{status}" end %>
 			<% end %>
