--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div id="sidebar-tools" class="flex flex-column navbar navbar-expand flex-shrink-0" style="z-index:1000;">
-    <div class="container-fluid px-2">
+    <div class="container-fluid px-0">
         <button class="navbar-toggler border-0 px-0 d-block d-lg-none me-2" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-primary" style="vertical-align:-4px;"><%= bootstrap_icon 'list', width:32, height:32 %></span>
         </button>
@@ -13,7 +13,7 @@
         <% end %>
     </div>
     <% if current_user.senior? %>
-    <div class="container-fluid px-2 px-md-3 mt-2 my-md-2 flex-fill">
+    <div class="container-fluid px-0 mt-2 flex-fill">
         <%= render partial: 'search' %>
     </div>
     <% end %>
