--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -116,6 +116,8 @@
 
 @media (min-width: 992px)
 {
+	$sidebar-width: 400px;
+	
 	#sidebar
 	{
 		display: block;
@@ -127,29 +129,25 @@
 		// prevents backdrop-filter blocking out text when scrolling
 		transform: translate3d(0,0,0);
 
-		-webkit-box-flex: 0;
-		flex: 0 0 33.3333333333%;
-		max-width: 33.3333333333%;
+		max-width: $sidebar-width;
 	}
 
 	#row-content
 	{
-		margin-left: 33.3333333333%;
-		flex: 0 0 auto;
-		width: 66.6666666667%;
+		margin-left: $sidebar-width;
+		width: calc(100vw - $sidebar-width);
 	}
 
 	.room-for-toc
 	{
 		#sidebar
 		{
-			flex: 0 0 25%;
-			max-width: 25%;
+			max-width: 350px;
 		}
 		#row-content
 		{
-			margin-left: 25%;
-			width: 75%;
+			margin-left: 350px;
+			width: calc(100vw - 350px);
 		}
 	}
 
@@ -177,10 +175,7 @@
 	{
 		margin-right:1rem;
 	}
-}
 
-@media (min-width: 992px)
-{
 	#sidebar > .nav > .nav
 	{
 		padding-left:1rem;
@@ -192,29 +187,11 @@
 		margin-left: 0 !important;
 		margin-right: 15em !important;
 	}
-
 }
 
 @media (min-width: 1200px)
 {
-	#sidebar
-	{
-		-webkit-box-flex: 0;
-		flex: 0 0 33.3333333333%;
-		max-width: 33.3333333333%;
-	}
-
-	#sidebar-tools, #sidebar-content
-	{
-		padding:1rem;
-	}
-
-	#row-content
-	{
-		margin-left: 33.3333333333%;
-		flex: 0 0 auto;
-		width: 66.6666666667%;
-	}
+	$sidebar-width: 500px;
 }
 
 //****************************************************************************
