--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -20,9 +20,15 @@ summary
 	color:var(--bs-primary);
 }
 
+$gradient1: #FEF3BE;
+$gradient2: #FFD3D2;
+
+$light-gradient1: scale-color($gradient1, $lightness: 20%);
+$light-gradient2: scale-color($gradient2, $lightness: 20%);
+
 #sidebar, #navbar
 {
-	background: linear-gradient(50deg, #FEF3BE 0%, #FDDDCB 100%);
+	background: linear-gradient(50deg, $light-gradient1 0%, $light-gradient2 100%);
 }
 
 #sidebar
@@ -31,7 +37,8 @@ summary
 	
 	#sidebar-tools
 	{
-		background: linear-gradient(50deg, #FBE5BF 0%, #FCD6BC 100%);
+		-webkit-backdrop-filter: brightness(102%);
+		backdrop-filter: brightness(102%);
 
 		.bg-light
 		{
@@ -41,8 +48,8 @@ summary
 
 	#course-links
 	{
-		-webkit-backdrop-filter: brightness(102%);
-		backdrop-filter: brightness(102%);
+		-webkit-backdrop-filter: brightness(103%);
+		backdrop-filter: brightness(103%);
 
 		.bg-light
 		{
