--- a/app/assets/stylesheets/includes/framework.scss
+++ b/app/assets/stylesheets/includes/framework.scss
@@ -45,48 +45,73 @@ body
 
 //****************************************************************************
 
+#content, #submit-content
+{
+	margin-left: auto;
+	margin-right: auto;
+}
+
 body.home #content, body.submissions #content
 {
-	@extend .px-3;
-	@extend .py-3;
-
-	@extend .px-sm-4;
-	@extend .py-sm-4;
-
-	@extend .mt-xl-4;
-
-	@extend .px-lg-5;
-	@extend .py-lg-5;
-
-	@extend .mx-auto;
+	padding: 1rem;
 }
 
 body.page #content, #submit-content
 {
-	@extend .pt-4;
-	@extend .pb-4;
-	@extend .px-4;
-
-	@extend .px-sm-4;
-	@extend .pb-sm-4;
-
-	@extend .pt-md-5;
-	@extend .mt-md-5;
-	@extend .pb-md-5;
-	@extend .px-md-5;
-
-	@extend .mx-auto;
+	padding: 1rem;
 }
 
-@media only screen and (min-width: 1365px)
+@media only screen and (min-width: 576px) // small
+{
+	body.home #content, body.submissions #content
+	{
+		padding: 1.5rem;
+	}
+
+	body.page #content, #submit-content
+	{
+		padding: 1.5rem;
+	}
+}
+
+@media only screen and (min-width: 768px) // medium
+{
+	body.page #content, #submit-content
+	{
+		padding: 3rem;
+//		margin-top: 3rem;
+	}
+}
+
+@media only screen and (min-width: 992px) // large
+{
+}
+
+@media only screen and (min-width: 1200px) // x-large
+{
+	body.home #content, body.submissions #content
+	{
+		margin-top: 1.5rem;
+		padding: 3rem;
+	}
+}
+
+@media only screen and (min-width: 1366px) // xxl
 {
 	#content
 	{
+		max-width:54rem !important;
+
+		margin-top: 3rem;
+		margin-bottom: 3rem;
+
+		padding-left: 4rem !important;
+		padding-right: 4rem !important;
+
 		box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.02) !important;
 		background-color: #FEFCFA;
 	}
 }
-
 
 #content section:first-child
 {
