--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,6 @@ $link-decoration: none;
 
 @import "bootstrap";
 
-@import "includes/framework";
 @import "includes/navigation";
 @import "includes/courselinks";
 @import "includes/content";
@@ -53,7 +52,5 @@ $link-decoration: none;
 @import "includes/effects";
 @import "includes/inplace";
 
-.table>:not(caption)>*>*
-{
-	background-image:none;
-}
+// includes responsive styles, so it goes last
+@import "includes/framework";
