--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -285,6 +285,7 @@
 
 #sidebar-content .nav-link, .materials-nav .nav-link
 {
+	display: flex;
 	padding: 0.5rem 0.25rem;
 	flex: 1 1 auto !important; // fill
 	border-top-right-radius: 0.25rem !important;
