--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -12,7 +12,7 @@
         <% elsif Settings.site_enabled && Webdav::Client.available? %>
         <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.until_deadline_new_version' %></p>
         <% end %>
-    <% elsif Settings.site_enabled && logged_in? %>
+    <% elsif Settings.site_enabled && Webdav::Client.available? && logged_in? %>
         <p><%= t 'submit.instructions' %></p>
     <% end %>
 
