add cache for user details, ensure caching upon changing notes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
 					<div class="card">
 						<div class="card-body">
 							<div class="p-1">
+								<% cache [current_user, :submits] do %>
 								<% @overview.each do |name, psets| %>
 								<p class="mb-1">
 									<strong><%= name.humanize %></strong>
@@ -23,12 +24,15 @@
 									<% end %>
 								</div>
 								<% end %>
+								<% end %>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md">
+					<% cache [current_user, :items] do %>
 					<%= render partial: "items/item", collection: @items %>
+					<% end %>
 				</div>
 			</div>
 		</div>
